# Rpi_printserver

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.specify/memory/: constitution.md
config/avahi/: airprint.service.template
config/cups/: cupsd.conf.template  printserver-wake.convs
config/samba/: smb.conf
config/systemd/: health-monitor.service  health-monitor.timer  printer-wake.path  printer-wake.service  printer-watchdog.service  printer-watchdog.timer  printserver-web.service  ssh-oom-protect.conf
config/udev/: 99-printer.rules
scripts/: configure-avahi.sh  configure-cups.sh  configure-samba.sh  configure-wifi.sh  cups-pre-filter-wake.sh  enable-printers.sh  health-monitor.sh  hotplug-printer.sh  install.sh  printer-watchdog.sh  restart-service.sh  set-hostname.sh  set-network.sh  update.sh  usb-printer-wake-backend  wake-printer.sh
specs/001-wifi-print-server/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-wifi-print-server/checklists/: requirements.md
src/cli/: __init__.py  setup.py
src/printserver/: __init__.py  config.py  cups_client.py  job.py  network_utils.py  printer.py  system_utils.py  version.py  wol.py
src/web/: app.py  routes.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_airprint.sh  test_cups_config.sh  test_install.sh  test_ipp.py  test_reliability.sh  test_samba.sh  test_web_routes.py
tests/unit/: __init__.py  test_config.py  test_cups_client.py  test_job.py  test_printer.py  test_ring_buffer.py  test_routes.py
(+10 files in other folders)
